--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,12 +34,14 @@ html,
 body,
 button {
   font-family: 'Jost', sans-serif;
+  
 }
 
 body {
   display: flex;
   min-height: 82vh;
   flex-direction: column;
+
 }
 
 // #carousel {
@@ -105,11 +107,12 @@ body {
     }
   .content {
     min-height: 67vh;
-    padding: 2% 6% 2% 6%;
+    padding: 2% 9% 2% 9%;
     max-width: 1500px;
     margin-left: auto;
     margin-right: auto;
   }
+  
 
   .content-mediators {
     min-height: 67vh;
@@ -164,7 +167,7 @@ body {
 }
 @media screen and (min-width: 1312px) and (max-width: 1452px) {
   #mediator-card-subtitle {
-    font-size: .8vw
+    font-size: .9vw
   }
 }
 
@@ -248,7 +251,7 @@ body {
   }
   .content {
     min-height: 67vh;
-    padding: 2% -0% 2% 0%;
+    padding: 4% 0% 2% 0%;
   }
 
   .content-mediators {
@@ -390,6 +393,20 @@ body {
   // }
 }
 
+@media screen and (orientation:landscape) and (max-width: 800px) {
+ 
+  #home-buttons button.is-info {
+  height: 20px;
+  width: auto;
+  padding:20px;
+ }
+ 
+
+ #has-text-over-photo {
+  padding-top: 30px;
+  font-size: 24px;
+ }
+}
 
 
 
@@ -512,7 +529,7 @@ span {
 }
 
 .navbar-title-text-responsive {
-  padding-right: 1.5vw
+  padding-right: 1.47vw
 }
 
 #navbar-item:active {
