--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -141,6 +141,23 @@ body {
                   padding-top: 10px;
                   margin-top: -1em;
                 }
+    #mediator-card {
+  margin-top: -1rem;
+  height: 40rem;
+  // box-shadow:  0.5em 10em -0.125em rgba(10, 10, 10, 0.1),
+  //   0 0px 0 1px rgba(10, 10, 10, 0.02)
+}
+#mediator-card-text {
+  padding-bottom: 20px;
+  min-height: 30vh;
+  // overflow: hidden;
+   
+}
+ #home-buttons {
+  margin-top:62vh;
+  padding-bottom: 11vh;
+  
+}
 }
 
 @media screen and (min-width: 1024px) {
@@ -181,6 +198,7 @@ body {
   #mediator-card-text {
     font-size: .85em;
   }
+  
 }
 
 @media screen and (max-width: 1023px) {
@@ -233,7 +251,19 @@ body {
                                   text-align: start;
                                 }
 
+#mediator-card {
+  margin-top: -1rem;
+  height: 40rem;
+  // box-shadow:  0.5em 10em -0.125em rgba(10, 10, 10, 0.1),
+  //   0 0px 0 1px rgba(10, 10, 10, 0.02)
+}
 
+#mediator-card-text {
+  padding-bottom: 20px;
+  min-height: 20vh;
+  // overflow: hidden;
+   
+}
 
   #logo-responsive {
     font-size: 4vw;
@@ -242,6 +272,20 @@ body {
    padding-top: 20px;
    margin-top: -1em;
  }
+
+  #home-buttons {
+  margin-top:62vh;
+  padding-bottom: 11vh;
+  
+}
+}
+
+// SMALL MOBILE 
+@media screen and (max-width: 460px) {
+#hero {
+     background-size: cover;
+     background-image: url(../assets/images/general/mobileBackground.webp);
+  }
 }
 
 // MOBILE
@@ -252,11 +296,42 @@ body {
   .content {
     min-height: 67vh;
     padding: 4% 0% 2% 0%;
+    margin: 0px -30px;
   }
+
+  .overlay-content {
+  position: relative;
+  top: 5%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  transition: 0.5s;
+  font-size: 1.2em
+}
+
+  .overlay .closebtn {
+  position: absolute;
+  color: $forestgreen;
+  top: -6vw;
+  right: 4vw;
+  font-size: 55px;
+}
+
+  #hero {
+    height: 70vh
+  }
+
+//   #hero-background {
+//   background-image: url(../assets/images/general/bridge-family-mediation-homepage-background.webp);
+//   background-position: cover;
+//   background-size: cover;
+//   background-repeat: no-repeat;
+//   position: relative
+// }
 
   .content-mediators {
     min-height: 67vh;
-    padding: 2% 5% 2% 5%;
+    padding: 2% 7% 2% 7%;
   }
 
   #mediator-logos {
@@ -266,6 +341,7 @@ body {
   #mediator-contact-info {
     display: none
   }
+
 
   #mediator-contact-info-mobile {
     display: flex;
@@ -306,6 +382,8 @@ body {
 
   #footer {
     padding-top: 20px;
+    padding-bottom: 10px;
+    text-align: center;
   }
 
   #footer-images-mobile {
@@ -320,9 +398,21 @@ body {
     object-fit: scale-down;
   }
 
-  #hero {
-    height: 110vh
-  }
+  
+
+ #home-buttons button.is-info {
+  height: 20px;
+  min-width: 200px;
+  width: 20vw;
+  padding: 30px;
+  font-size: 1.1em;
+}
+
+ #home-buttons {
+  margin-top:62vh;
+  padding-bottom: 4vh;
+  
+}
 
 
 
@@ -331,19 +421,28 @@ body {
   }
 
 
-
+#has-text-over-photo {
+  font-size: 1.3em
+}
 
 
   #logo-home-container {
     display: block;
-    word-spacing: -10px;
+    word-spacing: -.3rem;
   }
 
   #logo-responsive {
-    font-size: 4vw;
-    padding-left: 20px;
+    font-size: 6vw;
+    padding-left: 0px;
     line-height: 1.5;
+    letter-spacing: 7px;
   }
+
+  #logo-responsive-bridge-text {
+    padding-right: .5rem
+  }
+
+  
 
  
   #navbar-title-text {
@@ -354,6 +453,22 @@ body {
   #navbar-title img {
     height: 30px
   }
+
+
+  #mediator-card {
+  margin-top: -1rem;
+  height: fit-content;
+  
+  // box-shadow:  0.5em 10em -0.125em rgba(10, 10, 10, 0.1),
+  //   0 0px 0 1px rgba(10, 10, 10, 0.02)
+}
+
+#mediator-card-text {
+  padding-bottom: 20px;
+  min-height: 10vh;
+  // overflow: hidden;
+   
+}
 
   // #kate-brown-tab a {
   //   content: '';
@@ -393,17 +508,53 @@ body {
   // }
 }
 
-@media screen and (orientation:landscape) and (max-width: 800px) {
+@media screen and (orientation:landscape) and (max-width: 926px) {
  
+  .content {
+    min-height: 67vh;
+    padding: 4% 0% 2% 0%;
+    margin: 0px -30px;
+  }
+
   #home-buttons button.is-info {
   height: 20px;
   width: auto;
   padding:20px;
  }
+
+ .overlay-content {
+  position: relative;
+  top: 0%;
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+  transition: 0.5s;
+  
+}
+
+ #overlay-content a   {
+  font-size: 1rem;
+}
+#overlay-content   {
+  font-size: 1rem;
+}
+
+ .overlay .closebtn {
+  position: absolute;
+  color: $forestgreen;
+  top: -2vw;
+  right: 2vw;
+  font-size: 55px;
+}
+
+
  
+ #hero {
+    height: 80vh
+  }
 
  #has-text-over-photo {
-  padding-top: 30px;
+  padding-top: 3px;
   font-size: 24px;
  }
 }
@@ -529,7 +680,7 @@ span {
 }
 
 .navbar-title-text-responsive {
-  padding-right: 1.47vw
+  padding-right: 1rem
 }
 
 #navbar-item:active {
@@ -656,11 +807,7 @@ line-height: 1;
 position: relative
 }
 
-#home-buttons {
-  margin-top:62vh;
-  padding-bottom: 11vh;
-  
-}
+
 
 
 
@@ -707,6 +854,10 @@ position: relative
   border-radius: 0.25rem;
 }
 
+#title-faq {
+  text-transform: none;
+}
+
 #read-more {
   color: rgb(121, 120, 120);
   padding-bottom: 10px;
@@ -720,21 +871,11 @@ position: relative
   color: grey;
 }
 
-#mediator-card {
-  margin-top: -1rem;
-  height: 40rem;
-  // box-shadow:  0.5em 10em -0.125em rgba(10, 10, 10, 0.1),
-  //   0 0px 0 1px rgba(10, 10, 10, 0.02)
-}
 
 
 
-#mediator-card-text {
-  padding-bottom: 20px;
-  min-height: 30vh;
-  // overflow: hidden;
-   
-}
+
+
 
 .mediators-back-button{
   font-size: 1.1em;
@@ -993,7 +1134,12 @@ max-height: 500px
   border-radius: 0.25rem;
   height: auto;
   max-height: 300px
+}
 
+#mediation-breakdown-image-style-3 {
+  border-radius: 0.25rem;
+  height: auto;
+  max-height: 400px
 }
 
 // Useful Links
@@ -1125,7 +1271,7 @@ a:focus {
 
 .rc-accordion-toggle.active .rc-accordion-icon {
   transform: rotate(180deg);
-  color: #fff 
+  color: #fff ;
 }
 
 .rc-accordion-card {
@@ -1211,8 +1357,9 @@ a:focus {
 
 
 .rc-accordion-toggle-mobile.active .rc-accordion-icon  {
-  transform: rotate(180deg);
-  color: $outdoorsgreen
+  transform: rotate(180deg) ;
+  color: $outdoorsgreen;
+  
 }
 
 .rc-accordion-toggle.active .rc-accordion-title {
@@ -1253,15 +1400,7 @@ top: 0px;
   transition: 0.5s;
 }
 
-.overlay-content {
-  position: relative;
-  top: 25%;
-  width: 100%;
-  text-align: center;
-  margin-top: 30px;
-  transition: 0.5s;
-  font-size: 1.2em
-}
+
 
 // .overlay a {
 //   padding: 8px;
@@ -1277,12 +1416,12 @@ top: 0px;
   color: #f1f1f1;
 }
 
-.overlay .closebtn {
-  position: absolute;
+
+
+.fa-chevron-down {
   color: $forestgreen;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+  padding-bottom: 3px;
+  padding-left: 0px;
 }
 
 @media screen and (max-height: 450px) {
@@ -1294,9 +1433,5 @@ top: 0px;
     font-size: 20px
   }
 
-  .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
+  
 }
