--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -37,11 +37,19 @@ button {
   
 }
 
+a {
+   white-space: pre-wrap; /* CSS3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
+
 body {
   display: flex;
   min-height: 82vh;
   flex-direction: column;
-
+  overflow: hidden;
 }
 
 // #carousel {
@@ -278,6 +286,30 @@ body {
   padding-bottom: 11vh;
   
 }
+
+ .content {
+    min-height: 67vh;
+    padding: 4% 0% 2% 0%;
+    margin: 0px -30px;
+  }
+
+  .overlay-content {
+  position: relative;
+  top: 5%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+  transition: 0.5s;
+  font-size: 1.2em
+}
+
+  .overlay .closebtn {
+  position: absolute;
+  color: $forestgreen;
+  top: -2vw;
+  right: 1vw;
+  font-size: 50px;
+}
 }
 
 // SMALL MOBILE 
@@ -312,9 +344,9 @@ body {
   .overlay .closebtn {
   position: absolute;
   color: $forestgreen;
-  top: -6vw;
-  right: 4vw;
-  font-size: 55px;
+  top: -4vw;
+  right: 1.5vw;
+  font-size: 50px;
 }
 
   #hero {
